--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,6 @@
 This is a read me todo list app in javascript
 you can add new task
+then you can click Mark completed and also the color will change  
 you can delete one tast
 and also you can clear all the task in one time
-https://github.com/GuleidAbdi/Todo-list
+ https://guleidabdi.github.io/Todo-list/
